UX Refresh: fix warning message alignment - fix some input renderers, expose RenderContext to isDisabledInput

--- a/core/resources/styles/scss/labkey/components/_header.scss
+++ b/core/resources/styles/scss/labkey/components/_header.scss
@@ -207,3 +207,30 @@
 .labkey-notification-footer {
   background-color: $lk-page-header-notification-bg-color;
 }
+
+.lk-body-ct {
+  padding: 20px 0 0 0;
+}
+
+.lk-body-title {
+  margin-bottom: 20px;
+
+  h3 {
+    margin: 0;
+  }
+
+  .breadcrumb {
+    background-color: transparent;
+    padding: 0;
+    margin-bottom: 8px;
+  }
+}
+
+.default-template-alert {
+  margin: 0 15px 15px;
+}
+
+.dialog-template-alert,
+.wizard-template-alert {
+  margin-top: 20px;
+}
